--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -44,6 +44,10 @@ body {
     color: #007bff;
   }
 
+  a {
+    text-decoration: none !important;
+  }
+
   .my-button {
     box-shadow: 0px 0px 0px #007bff, -6px -6px 8px;
     border: none !important;
@@ -68,6 +72,13 @@ body {
       font-weight: 100;
       border-radius: 15px;
     }
+  }
+
+  .cv {
+    margin: 20px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
   }
 
   .title {
