--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -1,23 +1,20 @@
-html {
-  scroll-behavior: smooth;
-}
-
 body {
   background-color: #ecf0f3;
 }
 
-.one {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  background: rgba(236, 240, 243, 0.25);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(0px);
-  -webkit-backdrop-filter: blur(0px);
-  border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
-}
-
 .page-home {
+  overflow-x: hidden !important;
+  .one {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background: rgba(236, 240, 243, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(0px);
+    -webkit-backdrop-filter: blur(0px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+  }
+
   .profil-picture {
     display: block;
     margin-left: auto;
