--- a/style/main.css
+++ b/style/main.css
@@ -10922,7 +10922,7 @@ body {
   -webkit-box-shadow: 0px 0px 0px #007bff, -6px -6px 8px;
           box-shadow: 0px 0px 0px #007bff, -6px -6px 8px;
   border: none !important;
-  background-color: none !important;
+  background-color: #fff;
   margin: 10px;
   width: 140px;
   height: 40px;
@@ -10998,7 +10998,7 @@ body {
 
 .page-home .latest-work {
   max-width: 100%;
-  max-height: 124px;
+  max-height: 100px;
 }
 
 @media (min-width: 768px) {
