--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -52,7 +52,7 @@ body {
   .my-button {
     box-shadow: 0px 0px 0px #007bff, -6px -6px 8px;
     border: none !important;
-    background-color: none !important;
+    background-color: #fff;
     margin: 10px;
     width: 140px;
     height: 40px;
@@ -127,7 +127,7 @@ body {
 
   .latest-work {
     max-width: 100%;
-    max-height: 124px;
+    max-height: 100px;
 
     @include media-breakpoint-up(md) {
       max-width: 100%;
